feat: add url validation

--- a/classification_machine/templates/search_form.html
+++ b/classification_machine/templates/search_form.html
@@ -1,5 +1,3 @@
-<p>Hello World!</p>
-
 <form action="/search_form/" method="get">
     <label for="url">URL: </label>
     <input id="url" type="text" name="url" value="{{ url }}">
@@ -7,3 +5,4 @@
 </form>
 
 <p>カテゴリは「{{category}}」です。</p>
+<p>{{error_msg}}</p>
